--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8095
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/note_app
+spring.datasource.url=jdbc:mysql://db:3306/note_app
 spring.datasource.username=root
 spring.datasource.password=R00tP45w0rd
 #spring.datasource.initialize=true
